<resources>
    <string name="app_name">RespawnIRC</string>
    <string name="messagePlaceHolder">Rédigez votre message</string>
    <string name="messagePost">Envoyer</string>
    <string name="connectToJVC">Se connecter à JVC</string>
    <string name="pseudoForConnect">Votre pseudo</string>
    <string name="endConnect">Terminer</string>
    <string name="errorPseudoMissingConnect">Veuillez insérer le pseudo avec lequel vous vous êtes connecté dans le champ en haut.</string>
    <string name="errorCookiesMissingConnect">Vous n\'êtes pas connecté sur JVC.</string>
    <string name="overflow_menu_desc">Menu déroulant</string>
    <string name="quoteMessage">Citer</string>
    <string name="errorConnectedNeededBeforePost">Erreur, veuillez vous connecter avant d\'envoyer un message.</string>
    <string name="editMessage">Editer</string>
    <string name="hideSpoilMessage">Cacher les spoil</string>
    <string name="showSpoilMessage">Afficher les spoil</string>
    <string name="preference">Préférences</string>
    <string name="maxNumberOfMessagesTitle">Nb de messages affichés au max</string>
    <string name="initialNumberOfMessagesTitle">Nb de messages affichés au 1er chargement</string>
    <string name="general">Général</string>
    <string name="refreshTopicTimeTitle">Temps avant màj des messages (en ms)</string>
    <string name="loadTopicFromOldInfos">Poursuivre la lecture</string>
    <string name="help">Aide</string>
    <string name="ok">OK</string>
    <string name="help_dialog_connect">• Pour commencer, veuillez entrer votre pseudo dans le champ présent tout en haut.\n• Ensuite, veuillez vous connecter sur JVC avec ce même pseudo.\n• Enfin, cliquez sur le bouton \"Terminer\" tout en haut à droite.</string>
    <string name="welcome">Bienvenue !</string>
    <string name="later">Plus tard</string>
    <string name="help_firstlaunch">Bienvenue sur RespawnIRC !\n\nPour commencer il est conseillé de se connecter à JVC, mais vous pouvez très bien le faire plus tard.</string>
    <string name="openDrawerContentDescRes">Ouverture du menu latéral</string>
    <string name="closeDrawerContentDescRes">Fermeture du menu latéral</string>
    <string name="switchToForumMode">Passer en mode forum</string>
    <string name="switchToIrcMode">Passer en mode IRC</string>
    <string name="refresh">Rafraichir</string>
    <string name="topicClearOnRefreshTitle">Effacer les messages lors d\'un refresh</string>
    <string name="nextPageText"><![CDATA[>]]></string>
    <string name="previousPageText"><![CDATA[<]]></string>
    <string name="waitingText">…</string>
    <string name="cancel">Annuler</string>
    <string name="pageNumber">Numéro de la page…</string>
    <string name="choosePageNumber">Choisir un numéro de page</string>
    <string name="topicOrForumLink">Lien du topic/forum…</string>
    <string name="openTopicOrForumLink">Ouvrir un lien de topic/forum</string>
    <string name="topicAlternateBackgroundColorTitle">Alterner la couleur de fond des messages</string>
    <string name="topicIcon">Icone de topic</string>
    <string name="showQuoteMessage">Afficher les citations imbriquées</string>
    <string name="hideQuoteMessage">Cacher les citations imbriquées</string>
    <string name="maxNumberOfOverlyQuoteTitle">Nombre max de citations imbriquées</string>
    <string name="warningNotConnected">ATTENTION : Vous n\'êtes pas connecté !</string>
    <string name="errorQuoteAlreadyRunning">Erreur, citation déjà en cours.</string>
    <string name="errorInfosMissings">Erreur, informations manquantes (rechargez la page ?).</string>
    <string name="errorMessageAlreadySending">Erreur, envoie ou édition d\'un message actuellement en cours.</string>
    <string name="errorCantGetEditInfos">Erreur, impossible de récupérer les informations d\'édition.</string>
    <string name="errorDownloadFailed">Erreur, la récupération des informations a échoué.</string>
    <string name="errorForumPageDownloadFailed">Erreur, la récupération des informations a échoué, la page n\'existe peut-être pas.</string>
    <string name="errorConnectNeeded">Erreur, vous devez vous connecter pour effectuer cette action.</string>
    <string name="showNoelshackImageTitle">Afficher les miniatures</string>
    <string name="errorInvalidLink">Erreur, lien invalide.</string>
    <string name="pastLastMessageSended">Coller le dernier message envoyé</string>
    <string name="addAnAccount">Ajouter un compte</string>
    <string name="loadingFavs">Chargement des favoris…</string>
    <string name="forumFav">Forums favoris</string>
    <string name="errorDuringFetchFavs">Erreur durant la récupération des favoris.</string>
    <string name="topicFav">Topics favoris</string>
    <string name="deleteMessage">Supprimer le message</string>
    <string name="supressSuccess">Message supprimé.</string>
    <string name="errorDeleteOrRestoreAlreadyRunning">Erreur, suppression ou restauration déjà en cours.</string>
    <string name="openInExternalBrowser">Ouvrir dans le navigateur externe</string>
    <string name="openInInternBrowser">Ouvrir dans le navigateur interne</string>
    <string name="copy">Copier</string>
    <string name="forum">Forum</string>
    <string name="home">Accueil</string>
    <string name="expandList">Étendre la liste</string>
    <string name="isForum">Est un forum</string>
    <string name="forumSearch">Rechercher un forum</string>
    <string name="topicSearch">Rechercher un topic</string>
    <string name="noResultFound">Pas de résultat.</string>
    <string name="addToFavs">Ajouter aux favoris</string>
    <string name="removeFromFavs">Retirer des favoris</string>
    <string name="errorActionAlreadyRunning">Erreur, action déjà en cours.</string>
    <string name="favAdded">Favori ajouté.</string>
    <string name="favRemoved">Favori retiré.</string>
    <string name="topicLockedForReason">Topic fermé : %1$s</string>
    <string name="errorTopicIsLocked">Erreur, le topic est fermé.</string>
    <string name="transformStickerToSmileyTitle">Changer les stickers en smiley</string>
    <string name="transformStickerToSmileySummary">(tous les stickers ne sont pas changés)</string>
    <string name="unknownErrorPleaseRetry">Erreur inconnue, veuillez ré-essayer.</string>
    <string name="sendATopic">Poster un topic</string>
    <string name="topicTitlePlaceHolder">Titre…</string>
    <string name="pastLastTopicSended">Coller le dernier topic envoyé</string>
    <string name="showMp">Messages privés</string>
    <string name="showNotif">Notifications</string>
    <string name="linkTypeForInternalBrowserTitle">Utiliser le navigateur interne pour :</string>
    <string name="noelshack">Noelshack</string>
    <string name="link">Liens</string>
    <string name="useDirectNoelshackLinkTitle">Utiliser les liens directs</string>
    <string name="showOverviewOnImageClickTitle">Aperçu lors d\'un clique</string>
    <string name="openInBrowser">Ouvrir dans le navigateur</string>
    <string name="clickHereToSee">Cliquez ici pour le voir.</string>
    <string name="titleForSurvey">Sondage :</string>
    <string name="titleForClosedSurvey">Sondage fermé :</string>
    <string name="survey">Sondage</string>
    <string name="areYouSure">Êtes-vous sûr ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="mpOrNotifNumberNonZero">%1$s (!)</string>
    <string name="openCDV">Ouvrir la CDV</string>
    <string name="copyPseudo">Copier le pseudo</string>
    <string name="copyPermalink">Copier le lien permanent</string>
    <string name="selectText">Sélectionner du texte</string>
    <string name="copyUrl">Copier l\'URL</string>
    <string name="copyDone">Copie effectuée.</string>
    <string name="allTextCopied">Copie de l\'intégralité du texte.</string>
    <string name="insertStuff">Insérer…</string>
    <string name="shortenLongLinkTitle">Raccourcir les liens longs</string>
    <string name="showRefreshWhenMessagesShowedModeIRCTitle">Toujours afficher l\'icône de refresh</string>
    <string name="showSignatureTitle">Afficher les signatures</string>
    <string name="needToBeEnabledOnJVCFirstSummary">(doit être activé sur JVC)</string>
    <string name="needToBeEnabledOnJVCFirstSummaryWithString">%s (doit être activé sur JVC)</string>
    <string name="avatar">Avatar</string>
    <string name="showAvatarTitle">Afficher les avatars</string>
    <string name="always">Toujours</string>
    <string name="wifiOnly">Uniquement en WiFi</string>
    <string name="never">Jamais</string>
    <string name="enableCardDesignTitle">Affichage avec des cartes</string>
    <string name="hideUglyImagesTitle">Cacher les images nuisibles</string>
    <string name="hideUglyImagesSummary">(cache une partie des images noelshack)</string>
    <string name="hideUglyImagesMessage">Cacher les images nuisibles</string>
    <string name="showUglyImagesMessage">Afficher les images nuisibles</string>
    <string name="light">Clair</string>
    <string name="dark">Sombre</string>
    <string name="style">Style</string>
    <string name="black">Noir</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="settingsModeForumTitle">Mode forum</string>
    <string name="settingsModeIRCTitle">Mode IRC</string>
    <string name="imageAndLink">Images / Liens</string>
    <string name="behaviour">Comportement</string>
    <string name="topic">Sujet</string>
    <string name="author">Auteur</string>
    <string name="search">Rechercher</string>
    <string name="errorSearchImpossible">Erreur, recherche impossible.</string>
    <string name="forumAlternateBackgroundColorTitle">Alterner la couleur de fond des topics</string>
    <string name="enableSmoothScrollTitle">Activer le smoothscroll</string>
    <string name="whenPossibleSummary">(lorsque possible)</string>
    <string name="enableGoToBottomOnLoadTitle">Fin de page lors d\'un clique long</string>
    <string name="enableGoToBottomOnLoadSummary">(ne s\'applique qu\'aux topics favoris et de la liste des topics)</string>
    <string name="enableAutoScrollTitle">Activer l\'autoscroll</string>
    <string name="enableAutoScrollSummary">(scroll automatiquement après un refresh si déjà en bas de page)</string>
    <string name="informations">Informations</string>
    <string name="help_dialog_settings">Voici une liste de quelques fonctionnalités importantes que vous ne connaissez peut-être pas :\n\n• Un clique long sur un topic de la liste des topics ou des topics favoris vous permet d\'aller directement à la dernière page.\n• Un clique long sur le bouton d\'insertion (le +) vous permet d\'accéder à des options supplémentaires.\n• Un clique long sur le bouton d\'envoi de message vous permet de rafraichir la liste des messages sans les effacer.\n• Un clique normal sur le pseudo d\'un message vous permet d\'accéder à des options supplémentaires.\n• Un clique long sur le titre du topic / forum dans la toolbar vous permet de le voir en entier.\n• Un clique long sur un élément de la popup d\'insertion vous permet de l\'insérer sans fermer la popup.\n• Un clique long sur une image ou un lien vous permet d\'accéder à des options supplémentaires.</string>
    <string name="errorMessageContentNeededForSend">Erreur : Le message doit se composer au minimum de 1 caractère.</string>
    <string name="defaultShowSpoilValTitle">Afficher les spoils par défaut</string>
    <string name="markAuthorPseudoTitle">Marquer l\'auteur du topic</string>
    <string name="vote">Voter</string>
    <string name="errorVoteInvalide">Erreur, vote invalide.</string>
    <string name="share">Partager</string>
    <string name="kick">Kicker</string>
    <string name="motive">Motif :</string>
    <string name="reasonOfKick">Raison du kick…</string>
    <string name="subForums">Sous-forums</string>
    <string name="forumManagement">Gestion du forum</string>
</resources>