<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reload_forum_showforum"
        android:title="@string/refresh"
        android:icon="?attr/themedToolbarRefreshIcon"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_change_forum_fav_value_showforum"
        android:title="@string/addToFavs"/>
    <item
        android:id="@+id/action_search_topic_showforum"
        android:title="@string/topicSearch"/>
    <item
        android:id="@+id/action_open_in_browser_showforum"
        android:title="@string/openInBrowser"/>
    <item
        android:id="@+id/action_send_topic_showforum"
        android:title="@string/sendATopic"/>
    <item
        android:id="@+id/action_share_showforum"
        android:title="@string/share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"/>
</menu>
