<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_home_navigation"
            android:icon="@drawable/ic_action_action_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/action_forum_navigation"
            android:icon="@drawable/ic_action_communication_forum"
            android:title="@string/forum"/>
        <item
            android:id="@+id/action_showmp_navigation"
            android:icon="@drawable/ic_action_content_mail"
            android:title="@string/showMP"/>
        <item
            android:id="@+id/action_settings_navigation"
            android:icon="@drawable/ic_action_action_settings"
            android:title="@string/preference"/>
    </group>

</menu>
