<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/motives_layout_kickpseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_kickpseudo"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/motive"/>

        <Spinner
            android:id="@+id/motives_spinner_kickpseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/kickMotives"
            android:prompt="@string/motive"/>
        </LinearLayout>

        <EditText
            android:id="@+id/reason_edit_kickpseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/motives_layout_kickpseudo"
            android:layout_margin="8dp"
            android:gravity="bottom"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="4"
            android:maxLines="6"
            android:hint="@string/reasonOfKick"/>

        <Button
            android:id="@+id/kick_button_kickpseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reason_edit_kickpseudo"
            android:text="@string/kick"
            android:layout_margin="16dp"/>

        <include
            android:id="@+id/toolbar_kickpseudo"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@+id/toolbar_kickpseudo"
            android:background="?attr/themedShadowTop"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
