<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_errorbackgroundmessage_showforuminfos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_below="@+id/toolbar_showforuminfos"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/errorDownloadFailed"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh_showforuminfos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_showforuminfos">

            <ScrollView
                android:id="@+id/scrollview_showforuminfos"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/main_layout_showforuminfos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spaceAroundSingleCard"
                    android:clipToPadding="false"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_numberofconnected_showforuminfos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="16dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/subforum_card_showforuminfos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        app:cardElevation="@dimen/elevationOfCards"
                        app:cardCornerRadius="@dimen/cornerRadiusOfCards"
                        app:cardBackgroundColor="?attr/themedDefaultBackgroundColor">
                        <LinearLayout
                            android:id="@+id/subforum_list_showforuminfos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="12dp"
                                android:text="@string/subForums"
                                android:textAllCaps="true"
                                android:textColor="?attr/themedForumListCatTitleColor"
                                android:textStyle="bold"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/forummanagement_card_showforuminfos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="@dimen/elevationOfCards"
                        app:cardCornerRadius="@dimen/cornerRadiusOfCards"
                        app:cardBackgroundColor="?attr/themedDefaultBackgroundColor">
                        <LinearLayout
                            android:id="@+id/forummanagement_list_showforuminfos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="12dp"
                                android:text="@string/forumManagement"
                                android:textAllCaps="true"
                                android:textColor="?attr/themedForumListCatTitleColor"
                                android:textStyle="bold"/>
                            <TextView
                                android:id="@+id/listofmoderators_text_showforuminfos"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </ScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="?attr/themedShadowTop"
            android:layout_below="@+id/toolbar_showforuminfos"/>

        <include
            android:id="@+id/toolbar_showforuminfos"
            layout="@layout/toolbar"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
